Various dark mode fixes

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -138,7 +138,8 @@ nav.navbar {
 		}	
 	}
 	
-	.nav-item > a {
+	.nav-item > a,
+	.nav-item .navbar-text {
 		color: #ccc;
 	}
 	
